crates/compiler/tests/parse_errors/number_weird.elm
module Main exposing (..)

x = 3e
